tab overlap banner fix

--- a/src/components/_global/css/body/component.scss
+++ b/src/components/_global/css/body/component.scss
@@ -311,10 +311,12 @@ form {
     }
 
     .qld__banner {
-        + .qld__body,
-        + data + .qld__body {
-            &:first-of-type {
-                margin-top: 0
+        + #content {
+            .qld__body,
+            data + .qld__body {
+                &:first-of-type {
+                    margin-top: 0
+                }
             }
         }
     }
